/******************************************************************************
*
* Copyright Saab AB, 2015 (http://safirsdkcore.com/)
*
* Created by: Joel Ottosson / joel.ottosson@consoden.se
*
*******************************************************************************
*
* This file is part of Safir SDK Core.
*
* Safir SDK Core is free software: you can redistribute it and/or modify
* it under the terms of version 3 of the GNU General Public License as
* published by the Free Software Foundation.
*
* Safir SDK Core is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with Safir SDK Core.  If not, see <http://www.gnu.org/licenses/>.
*
******************************************************************************/
syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package Safir.Dob.Internal.Com;

message CommunicationMessage {

    enum SequenceSerie {
        UnicastSerie = 0;
        MulticastSerie = 1;
    }

    message Node {
        optional sfixed64 node_id = 1; //node_id=0 and name=seed means seed_node
        optional string name = 2;
        optional sfixed64 node_type_id = 3;
        optional string control_address = 4;
        optional string data_address = 5;
    }

    message Discover {
        optional sfixed64 sent_to_id = 1;
        optional Node from = 2;
    }

    message NodeInfo {
        optional sfixed64 sent_from_id = 1;
        optional sfixed64 sent_to_id = 2;
        optional int32 packet_number = 3; //this packet number
        optional int32 number_of_packets = 4; //total number of packets
        optional Node sent_from_node = 5;
        repeated Node nodes = 6;
    }

    //Fields
    optional Discover discover = 1;
    optional NodeInfo node_info = 2;
}
